--- a/dynamic-board-core/build.gradle
+++ b/dynamic-board-core/build.gradle
@@ -5,7 +5,9 @@ jar {
     enabled = true
 }
 dependencies {
-    //api('org.springframework.boot:spring-boot-starter-data-jpa')
+    api('org.springframework.boot:spring-boot-starter-data-jpa')
     //implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
-    //runtimeOnly 'mysql:mysql-connector-java'
+    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'
+    runtimeOnly 'mysql:mysql-connector-java'
 }
