--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,11 @@ subprojects {
     dependencies {
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
+
+        implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.4.5'
+
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation("com.navercorp.fixturemonkey:fixture-monkey-starter:0.3.1")
     }
 
     test {
